--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "antd": "^4.20.5",
+    "immutable": "^4.1.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.1.0",
