--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "antd": "^4.20.5",
-    "immutable": "^4.1.0",
-    "mobx": "^6.5.0",
-    "mobx-react-lite": "^3.4.0",
+    "immer": "^9.0.14",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
+    "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
